Update readme + index.html

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
     <link rel="icon" href="assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="React Boilerplate bundled with parcel." />
-    <title>React Boilerplate</title>
+    <meta name="description" content="Path of Exile 2 tool kit" />
+    <title>Path of Exile 2 Tool kit</title>
   </head>
   <body>
     <div id="app"></div>
