--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="assets/favicon.ico" />
+    <link rel="icon" href="assets/Acceleration_Shrine_status_icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Path of Exile 2 tool kit" />
