--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,11 @@
     <link rel="icon" href="assets/Acceleration_Shrine_status_icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Path of Exile 2 tool kit" />
-    <title>Path of Exile 2 Tool kit</title>
+    <meta
+      name="description"
+      content="A set of tools including a Weapon DPS calculator for use in Path of Exile 2 video game."
+    />
+    <title>Weapon DPS Calculator</title>
   </head>
   <body>
     <div id="app"></div>
